--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -46,6 +46,20 @@ p span.i1{
 	padding-left: 2em;
 }
 
+footer{
+	margin-top: 1em;
+	text-align: right;
+}
+
+[epub|type~="z3998:salutation"] + p{
+	text-indent: 0;
+}
+
+[epub|type~="z3998:sender"],
+[epub|type~="z3998:salutation"]{
+	font-variant: small-caps;
+}
+
 .signature{
 	font-variant: small-caps;
 }
