--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -46,6 +46,11 @@ footer{
 	text-align: right;
 }
 
+[epub|type~="z3998:postscript"]{
+	margin-top: 1em;
+	text-align: left;
+}
+
 [epub|type~="z3998:salutation"] + p{
 	text-indent: 0;
 }
