--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -2,6 +2,10 @@
 @namespace epub "http://www.idpf.org/2007/ops";
 
 /* All dedications */
+section[epub|type~="dedication"]{
+	text-align: center;
+}
+
 section[epub|type~="dedication"] > *{
 	display: inline-block;
 	margin: auto;
