--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -53,6 +53,7 @@ footer{
 [epub|type~="z3998:postscript"]{
 	margin-top: 1em;
 	text-align: initial;
+	text-indent: 0;
 }
 
 [epub|type~="z3998:salutation"] + p{
